syntax = "proto3";

package users;

service UsersService {
  rpc CreateUser (CreateUserRequest) returns (User) {}
  rpc GetUsers (Empty) returns (GetUsersResponse) {}
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message GetUsersResponse {
  repeated User users = 1;
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
}

message Empty {}